homework3/NOTE
Pulling https://github.com/poker303/IS-2020-prog-2-sem/homework3
Pull finished
RouteAnalysis.cpp: In function 'double get_dist(std::pair<double, double>, std::pair<double, double>)':
RouteAnalysis.cpp:10:10: warning: structured binding declaration set but not used [-Wunused-but-set-variable]
   10 |     auto [x_1, y_1] = stop_coord1;
      |          ^~~~~~~~~~
RouteAnalysis.cpp:13:10: warning: structured binding declaration set but not used [-Wunused-but-set-variable]
   13 |     auto [x_2, y_2] = stop_coord2;
      |          ^~~~~~~~~~
main.cpp: In function 'int main()':
main.cpp:140:16: error: 'round' was not declared in this scope
  140 |    << " ; " << round(max_type_s_route[temp_type].second) << " km\n";
      |                ^~~~~
make: *** [makefile:2: all] Error 1



